Implement dynamic locale management: add BundledLocale for bundled locale files, enhance localization loading, and refactor locale settings for improved flexibility.